fix overflow container resident list

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -579,7 +579,6 @@ input[type="button"]:disabled {
   position: absolute;
   padding: 10px 20px 10px 20px;
   z-index: 1;
-  bottom: 100%;
   left: 50%;
   margin-left: -100px;
   border-radius: 8px;
@@ -593,12 +592,12 @@ input[type="button"]:disabled {
 .list-modal-hover-wizard::after {
   content: "";
   position: absolute;
-  top: 100%;
+  bottom: 100%;
   left: 50%;
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: hsla(0, 0%, 35%, 0.9) transparent transparent transparent;
+  border-color: transparent transparent hsla(0, 0%, 35%, 0.9) transparent;
 }
 
 .list-modal-hover-wizard.on {
